Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42744 lupdate needs C++11 support
  3. QTBUG-36589

lupdate has a problem with C++11 "enum class" declarations.

XMLWordPrintable

    • a1b46788b (dev), d0971f97e (6.5)

      If there is a forward declaration of an enum class before a class lupdate prints a warning. But the .ts file is appropriate created.

      E:/temp/foo.cpp:4: Qualifying with unknown namespace/class ::Foo
      Updating 'foo.ts'...
          Found 1 source text(s) (0 new and 1 already existing)
      

        1. foo.cpp
          0.1 kB
          Björn
        2. foo.hpp
          0.1 kB
          Björn
        3. foo.pro
          0.1 kB
          Björn
        For Gerrit Dashboard: QTBUG-36589
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            hazardy Björn
            Votes:
            14 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes