CMakeProjectManager: Don't use typed enum where it is unrelevant

It confuses lupdate (QTBUG-36589), and is totally unrelevant in this
case.

Change-Id: I65444fcdb62b7d95de9f22025272508aa3bf272e
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>